2009-04-21  Ingo Renner  <ingo@typo3.org>

	* Fixed icon in t3skin for refresh

2009-04-20  Tobias Liebig <mail_typo3@etobi.de>

	* Fixed issue #9051: t3editor / On Mac Os X the key combination CMD+LEFT will close the t3editor

2009-04-20  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #10759: RemoveXSS is incompatible with PHP >= 5.2.8

2009-04-17  Christian Kuhn  <lolli@schwarzbu.ch>

	* Fixed bug #2178: template::getTabMenu doubles ampersands (thanks to Stefano Kowalke)

2009-04-16  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #10735: Wrong returnUrl with clipboard actions
	* Fixed bug #8795: Update button in User Admin -> Compare user settings doesn't work in IE7

2009-04-09  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed issue #10847: htmlArea RTE: undo/redo is erratic in IE8
	* Fixed issue #10665: RTE loads skin stylesheet with title attribute which prevents Firefox from applying the stylesheet

2009-04-09  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #8882: drag & drop of section elements and IRRE records does not work if frame has to be scrolled (thanks to Sebastian Fuchs & Helmut Hummel)

2009-04-08  Christian Kuhn  <lolli@schwarzbu.ch>

	* Fixed bug #10266: No user authentication for >1 TYPO3 installation under one domain (Thanks to Marcus Krause)

2009-04-06  Stanislas Rolland  <typo3@sjbr.ca>

	* Follow-up to issue #10834: htmlArea RTE: IE8 now uses standard name for DOM class attribute

2009-04-05  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #10203: RTE does not work in TemplaVoila FCE Section

2009-04-04  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #10761: Searching for specific record opens "edit record" in wrong frame

2009-04-03  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed issue #10837: htmlARea RTE: IE8 reports unknown "complete" attribute on img nodes
	* Fixed bug #10836: htmlARea RTE: RTE leaves unwanted id attribute on inserted table in IE8
	* Fixed bug #10844: htmlArea RTE: IE8 creates erroneous ranges when selection is empty